fix rankelement overflow

--- a/myapp/client/src/Styles/Ranks.css
+++ b/myapp/client/src/Styles/Ranks.css
@@ -4,6 +4,7 @@
     /* max-width: 50vw; */
     width: 98%;
     background-color: rgb(235, 235, 235);
+    overflow: auto;
     padding: 0.2em;
     margin: 0.2em;
     -webkit-box-shadow: 2.5px 2.5px 5px 0px rgba(0,0,0,0.5);
